--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
-JWT_SECRET=supersecret 
+JWT_SECRET="jag-heter-användare-och-jag-tycker-om-banan",
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
