--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^17.2.3",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "os": "^0.1.2",
     "ws": "^8.18.3"
